Fix Login Page Respsiveness, Consolidate Bootstrap Classes. Fix Unnecesarry Horizontal Scrollbar.

--- a/TheatreCMS/Content/Site.css
+++ b/TheatreCMS/Content/Site.css
@@ -46,7 +46,7 @@
 
 
 .palette-body {
-    background-color: var(--main-bg-color);
+    background-color: black;
     margin-bottom: auto;/* Applying --main-bg-color to the background of body */
 }
 
@@ -2671,6 +2671,7 @@ textarea {
 /*This class was added to move most of the content of the login page to the left*/
 .loginpadding {
     padding-left: 50px;
+    /*padding-right: 25px;*/
 }
 
 /*This class was also added to move certain elements on the login page left*/
@@ -2689,7 +2690,7 @@ textarea {
 
 /* using webkit to make scrollbar styling compatible with Chrome, Edge(most recent version), and Safari*/
 ::-webkit-scrollbar { /* This effects the width of the scrollbar. If the width is adjusted the buttons (arrows) must be adjusted as well*/
-    width: 14px; /* Horizontal Scrollbar*/
+    /*width: 14px;*/ /* Horizontal Scrollbar*/
     height: 14px; /* Vertical Scrollbar */
 }
 
@@ -2755,10 +2756,10 @@ textarea {
 
 /* this section is applicable only to the styling of the scrollbar on Firefox. Used in conjunction with webkit for better compatibility*/
 
-* {
-    scrollbar-width: auto; /* This shows a message that it is not a known CSS property but is supported in FireFox and will show as expected when launched with that browser. */
-    scrollbar-color: var(--main-bg-color) var(--light-color); /* first color effects the thumb and the second color effects the track*/
-}
+/** {
+    scrollbar-width: auto;  /*This shows a message that it is not a known CSS property but is supported in FireFox and will show as expected when launched with that browser.*/ 
+    /*scrollbar-color: var(--main-bg-color) var(--light-color); /* first color effects the thumb and the second color effects the track
+}*/
 
 
 /* End scrollbar Styling*/
